# qubit-playground

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  version-release.yml
examples/: resonance_hunt.py
src/qubit_playground/: __init__.py  lossy_oscillator.py  plot_lossy_oscillator.py
src/qubit_playground/light_matter/: __init__.py  bloch.py  emitter.py  environment.py  fitting.py  plot_bloch.py  plot_purcell.py  plot_strong_coupling.py  purcell.py  scenarios.py  strong_coupling.py  units.py
src/qubit_playground/light_matter/scenarios/: circle_weak.toml  circle_wgm.toml
tests/: conftest.py  test_lossy_oscillator.py  test_plot.py
tests/light_matter/: conftest.py  test_bloch.py  test_emitter.py  test_environment.py  test_fitting.py  test_plots.py  test_purcell.py  test_scenarios.py  test_strong_coupling.py
