[project]
name = "qubit-playground"
version = "0.1.0"
authors = [
    {name="Claudio Silvestre Castro", email="claudio.silvestre.castro@gmail.com"},
]
description = "Playground for simulating open quantum systems using dinamiqs and JAX."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynamiqs>=0.3.4",
    "matplotlib>=3.11.0",
    "qutip>=5.3.0",
]

[project.scripts]
qubit-playground = "qubit_playground:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
