[project]
name = "qubit-playground"
version = "0.2.0"
authors = [
    {name="Claudio Silvestre Castro", email="claudio.silvestre.castro@gmail.com"},
]
description = "Playground for simulating open quantum systems using dynamiqs and JAX."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "dynamiqs>=0.3.4",
    "matplotlib>=3.11.0",
    "numpy>=1.26",
    "pysie2d>=0.2.1",
    "scipy>=1.11",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "D", "N", "B", "I", "C4", "A"]
ignore = [
    "D203", "D204", "D213", "D215", "D400", "D401",
    "D404", "D406", "D407", "D408", "D409", "D413",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # test names are the documentation

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
commit_parser_options = { ignore_merge_commits = true }
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''Merged? .*''',
]

[tool.semantic_release.remote]
type = "github"
